--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ bottle==0.12.25
 bottle-websocket==0.2.9
 branca==0.7.2
 bs4==0.0.2
+build==1.2.2.post1
 cachetools==5.3.3
 certifi==2024.8.30
 cffi==1.16.0
@@ -112,6 +113,8 @@ pdfplumber==0.11.2
 pefile==2023.2.7
 pillow==10.3.0
 pillow_heif==0.16.0
+pip-autoremove==0.10.0
+pip-tools==7.4.1
 platformdirs==4.3.6
 prompt-toolkit==3.0.43
 Protego==0.3.1
@@ -135,9 +138,11 @@ pyinstaller-hooks-contrib==2024.8
 pyOpenSSL==24.2.1
 pyparsing==3.1.2
 pypdfium2==4.30.0
+pyproject_hooks==1.2.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytomlpp==1.0.13
 pytz==2024.1
 pywin32==308
 pywin32-ctypes==0.2.3
@@ -162,6 +167,8 @@ starlette==0.38.6
 telepath==0.3.1
 tldextract==5.1.2
 toml==0.10.2
+tomli_w==1.1.0
+tomlkit==0.13.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.2
